JMWE-67 : In Assign To Last Role Member function, add an option to take current assignee into account
git-svn-id: https://studio.plugins.atlassian.com/svn/JMWE/trunk@158714 2c54a935-e501-0410-bc05-97a93f6bca70