@@ -8,7 +8,7 @@
 	<groupId>com.innovalog.jmwe</groupId>
 	<artifactId>jira-misc-workflow-extensions</artifactId>
 	<name>JIRA Misc Workflow Extensions</name>
-	<version>2.4</version>
+	<version>2.4.1</version>
 	<packaging>atlassian-plugin</packaging>
 
 	<scm>
@@ -97,34 +97,6 @@
         	<version>2.3</version>
         </dependency>
     </dependencies>
-
-<!-- <profiles>
-		<profile>
-			<id>plugin-debug</id>
-			<build>
-				<defaultGoal>verify</defaultGoal>
-			</build>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<http.port>8080</http.port>
-				<rmi.port>9001</rmi.port>
-				<maven.test.skip>true</maven.test.skip>
-				<cargo.wait>true</cargo.wait>
-				<jvmargs>
-					<![CDATA[-Xms128m -Xmx256m -XX:MaxPermSize=128M -Xdebug -Xnoagent -Xrunjdwp:server=y,transport=dt_socket,address=5005,suspend=n]]>
-				</jvmargs>
-				<jira.config.directory>
-					plugin-debug
-				</jira.config.directory>
-				<unpack.jira.config.overwrite>
-					false
-				</unpack.jira.config.overwrite>
-			</properties>
-		</profile>
-	</profiles>
--->
 
 	<distributionManagement>
 		<repository>
